2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MimeTypes.cs: Add support for xpi.

2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Logger.cs: Add thread id to log line.

2009-11-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* JobWindows.cs: If we were executing with mono when respawning,
	we need to execute the respawned process with mono too, otherwise
	cygwin complains in funny ways.
	
	* Configuration.cs: Log a bit less and improve respawn argument
	handling.

2009-11-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: Fix respawn hack to not include the filename
	in the arguments.

2009-11-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Job.cs:
	* JobWindows.cs:
	* ProcessHelper.cs:
	* ProcessHelperWindows.cs: Add a new Job class that is an improved
	version of a Process: it can kill all its descendants too. On Windows
	implement this using the JobObject Win32 api, on the rest of the archs
	continue finding process descendants manually.

	* MonkeyWrench.csproj: Add new files.

	* Configuration.cs: Add a respawn hack.

2009-11-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: On Windows look in MyDocuments folder too when
	searching for a MonkeyWrench.xml.

2009-11-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ProcessHelper.cs: For process stuff consider cygwin as Windows.

2009-11-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: Add cygwin detection methods.

2009-11-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: The include dir is named include, not install.

2009-11-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: Add support for C[PLUS]_INCLUDE_PATH.

2009-11-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities.cs: If gzunzip didn't finish in time and we fail to
	kill the gzunzip process, it most likely finished just before we
	tried to kill it - assume everything is ok.

2009-11-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>
