@@ -1,5 +1,10 @@
 2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* FileUtilities.cs: Remove the external gunzip method, just use the
+	managed GZipStream.
+
+2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* MimeTypes.cs: Add support for xpi.
 
 2010-02-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>
